fix(textfield): increase contrast of placeholder text

--- a/src/tokens/_flexy-comp-textfield.scss
+++ b/src/tokens/_flexy-comp-textfield.scss
@@ -9,7 +9,7 @@ $_flexy-comp-textfield: (
   container-height: 48px,
   container-padding: 16px,
   container-shape: map.get($flexy-sys-shape, 'small'),
-  placeholder-color: $flexy-sys-palette-grey-50,
+  placeholder-color: $flexy-sys-palette-grey-70,
 
   icon-leading-spacing: 16px,
   icon-trailing-spacing: 16px,
